--- a/src/components/css/TweetFeedCard.css
+++ b/src/components/css/TweetFeedCard.css
@@ -1,7 +1,7 @@
 
 .tweet-card {
   position: relative; 
-  background-color: #f0f8ff; 
+  background-color: #141617; 
   border: 2px solid #1da1f2; 
   border-radius: 12px;
   padding: 20px;
