--- a/src/components/css/Post.css
+++ b/src/components/css/Post.css
@@ -3,6 +3,10 @@
   align-items: flex-start;
   border-bottom: 1px solid var(--twitter-background);
   padding-bottom: 10px;
+  background-color: rgba(32, 142, 142, 0.324);
+  border-radius: 10px;
+  padding: 20px;
+  margin: 10px;
 }
 .post__body {
   flex: 1;
@@ -17,7 +21,7 @@
 }
 .post__footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 10px;
 }
 .post__badge {
