--- a/src/components/css/Post.css
+++ b/src/components/css/Post.css
@@ -7,6 +7,7 @@
   border-radius: 10px;
   padding: 20px;
   margin: 10px;
+  max-width: 90vh;
 }
 .post__body {
   flex: 1;
@@ -36,6 +37,12 @@
 .post__avatar {
   padding: 20px;
 }
+.img{
+  /* height: 10%; */
+  width: 80%;
+  border-radius: 20px;
+}
+p { word-break: break-all }
 
 .post__date {
   margin-bottom: 10px;
