--- a/src/components/css/Sidebar.css
+++ b/src/components/css/Sidebar.css
@@ -18,6 +18,16 @@
   height: 50px !important;
   margin-top: 20px !important;
 }
+.sidebar__logout{
+  background-color: var(--twitter-color) !important;
+  border: none !important;
+  color: rgb(0, 0, 0) !important;
+  font-weight: 900 !important;
+  text-transform: inherit !important;
+  border-radius: 30px !important;
+  height: 50px !important;
+  margin-top: 20px !important;
+}
 .sidebar__twitterIcon {
   color: var(--twitter-color);
   font-size: 30px !important;
